# oh-hi-markdown

./: .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  PLAN.md  README.md  REQUIREMENTS.md  gitignore  pyproject.toml
.github/workflows/: ci.yml
docs/: integration-test-results.md
docs/superpowers/plans/: 2026-03-14-project-scaffolding.md  2026-03-15-implementation-sequence.md
docs/superpowers/specs/: 2026-03-14-test-strategy-design.md
spikes/: spike1_raw_data.json  spike1_results.md  spike2_results.md  spike_filesystem.py  spike_parser.py
src/oh_hi_markdown/: __init__.py  cli.py  config.py  exceptions.py  images.py  jina.py  log.py  parser.py  pipeline.py  provider.py  publisher.py  writer.py
tests/: conftest.py  test_cli.py  test_images.py  test_images_retry.py  test_parser.py  test_pipeline.py  test_provider.py  test_publisher.py  test_writer.py
