[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-hi-markdown"
version = "0.1.0"
description = "CLI tool that downloads web articles as clean, AI-friendly markdown with locally-stored images"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
authors = [{name = "Benny Lewis"}]
dependencies = [
    "requests>=2.28",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "ruff>=0.4",
]

[project.scripts]
ohmd = "oh_hi_markdown.cli:main"
ohhimark = "oh_hi_markdown.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
